// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test the SideDrawer Component should match snapshot 1`] = `
<nav
  className="side-drawer open"
>
  <NavLinks
    userRole="attendant"
  />
</nav>
`;

exports[`Test the SideDrawer Component should match snapshot 2`] = `
<nav
  className="side-drawer"
>
  <NavLinks
    userRole="admin"
  />
</nav>
`;
